--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 						<div id="header" class="item" data-width="400">
 							<div class="inner">
 								<h1>Lady Saltos</h1>
-								<p>Artista Plástica - Obras Personalizadas WhatsApp 👉 0959400979 / 046058762 / 0978838196 Camilo Destruge 4514 e/calle 27 y 28ava <br />
+								<p>Artista Plástica - Obras Personalizadas WhatsApp 👉 +593978838196 / 046058762  Camilo Destruge 4514 e/calle 27 y 28ava <br />
 								Guayaquil - Ecuador 🎨</p>
 							</div>
 						</div>
@@ -85,11 +85,13 @@
 						<article class="item thumb" data-width="282"><h2>Lady Saltos 0978838196</h2><a href="images/fulls/04.jpg" class="image"><img src="images/thumbs/04.jpg" alt="Lady Saltos"></a></article>
 
 				</div>
+				<div>https://www.facebook.com/media/set/?set=a.2005406886199252.1073741940.152536728152953&type=1&l=2a0737fbe3</div>
+				<div> </div>
 			</div>
 
 			<div id="footer">
 				<div class="left">
-					<p>Artista <strong>Lady Saltos</strong>, a sus ordenes <a href="https://api.whatsapp.com/send?phone=593978838196&text=Hola%20quiero%20informacion " target="_blank">WhatsApp</a>. Es un placer atenderte.<br />
+					<p>Artista <strong>Lady Saltos</strong>, a sus ordenes <a href="https://api.whatsapp.com/send?phone=593978838196&text=Hola%20quiero%20informacion%20Envio%20Gratis%20con%20este%20codigo%20P45Z" target="_blank">WhatsApp</a>. Es un placer atenderte.<br />
 					visitanos en facebook <a href="https://www.facebook.com/pintora.lady.saltos" target="_blank">Dale like y enterate de promociones exclusivas.</a>  Pintora Lady Saltos.</p>
 				</div>
 				<div class="right">
@@ -97,11 +99,11 @@
 						<!--<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>-->
 						<li><a href="https://www.instagram.com/lady_saltos/" target="_blank" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 						<li><a href="www.facebook.com/pintora.lady.saltos" target="_blank" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-						<li><a href="https://api.whatsapp.com/send?phone=593959400979&text=Hola%20quiero%20informacion" target="_blank" class="icon fa-whatsapp"><span class="label">WhatsApp</span></a></li>
-						<li><a href="mailto:lady.saltos@gmail.com" class="icon fa-envelope"><span class="label">Email</span></a></li>
+						<li><a href="https://api.whatsapp.com/send?phone=593978838196&text=Hola%20quiero%20informacion%20Envio%20Gratis%20con%20este%20codigo%20P45Z" target="_blank" class="icon fa-whatsapp"><span class="label">WhatsApp</span></a></li>
+						<li><a href="mailto:galerialadysaltos@gmail.com" class="icon fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
-						<li>&copy; Lady Saltos</li><li>Design: <a href="#">HTML5 UP</a></li>
+						<li>&copy; Lady Saltos</li>
 					</ul>
 				</div>
 			</div>
