--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 					<ul class="contact">
 						<!--<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>-->
 						<li><a href="https://www.instagram.com/lady_saltos/" target="_blank" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="www.facebook.com/pintora.lady.saltos" target="_blank" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+						<li><a href="https://www.facebook.com/pintora.lady.saltos" target="_blank" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 						<li><a href="https://api.whatsapp.com/send?phone=593978838196&text=Hola%20quiero%20informacion%20Envio%20Gratis%20con%20este%20codigo%20P45Z" target="_blank" class="icon fa-whatsapp"><span class="label">WhatsApp</span></a></li>
 						<li><a href="mailto:galerialadysaltos@gmail.com" class="icon fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
