--- a/index.html
+++ b/index.html
@@ -76,12 +76,12 @@
 						</article>
 
 					<!-- Filler Thumb Items (just for demonstration purposes) -->
-						<article class="item thumb" data-width="476"><h2>Lady Saltos 0978838196</h2><a href="images/fulls/05.jpg" class="image"><img src="images/thumbs/05.jpg" alt="Lady Saltos"></a></article>
-						<article class="item thumb" data-width="232"><h2>Lady Saltos 0978838196</h2><a href="images/fulls/06.jpg" class="image"><img src="images/thumbs/06.jpg" alt="Lady Saltos"></a></article>
-						<article class="item thumb" data-width="352"><h2>Lady Saltos 0978838196</h2><a href="images/fulls/07.jpg" class="image"><img src="images/thumbs/07.jpg" alt="Lady Saltos"></a></article>
-						<article class="item thumb" data-width="348"><h2>Lady Saltos 0978838196</h2><a href="images/fulls/08.jpg" class="image"><img src="images/thumbs/08.jpg" alt="Lady Saltos"></a></article>
-						<article class="item thumb" data-width="282"><h2>Lady Saltos 0978838196</h2><a href="images/fulls/01.jpg" class="image"><img src="images/thumbs/01.jpg" alt="Lady Saltos"></a></article>
-						<article class="item thumb" data-width="384"><h2>Lady Saltos 0978838196</h2><a href="images/fulls/02.jpg" class="image"><img src="images/thumbs/02.jpg" alt="Lady Saltos"></a></article>
+						<article class="item thumb" data-width="476"><h2>Lady Saltos 0978838196</h2><a href="images/fulls/LADY SALTOS 2507181558.jpg" class="image"><img src="images/thumbs/LADY SALTOS 2507181558.jpg" alt="Lady Saltos"></a></article>
+						<article class="item thumb" data-width="232"><h2>Lady Saltos 0978838196</h2><a href="images/fulls/LADY SALTOS 2507181611.jpg" class="image"><img src="images/thumbs/LADY SALTOS 2507181611.jpg" alt="Lady Saltos"></a></article>
+						<article class="item thumb" data-width="352"><h2>Lady Saltos 0978838196</h2><a href="images/fulls/LADY SALTOS 2507181639.jpg" class="image"><img src="images/thumbs/LADY SALTOS 2507181639.jpg" alt="Lady Saltos"></a></article>
+						<article class="item thumb" data-width="348"><h2>Lady Saltos 0978838196</h2><a href="images/fulls/LADY SALTOS 2507181655.jpg" class="image"><img src="images/thumbs/LADY SALTOS 2507181655.jpg" alt="Lady Saltos"></a></article>
+						<article class="item thumb" data-width="282"><h2>Lady Saltos 0978838196</h2><a href="images/fulls/LADY SALTOS 2507181705.jpg" class="image"><img src="images/thumbs/LADY SALTOS 2507181705.jpg" alt="Lady Saltos"></a></article>
+						<article class="item thumb" data-width="384"><h2>Lady Saltos 0978838196</h2><a href="images/fulls/LADY SALTOS 2507181713.jpg" class="image"><img src="images/thumbs/LADY SALTOS 2507181713.jpg" alt="Lady Saltos"></a></article>
 						<article class="item thumb" data-width="274"><h2>Lady Saltos 0978838196.</h2><a href="images/fulls/03.jpg" class="image"><img src="images/thumbs/03.jpg" alt="Lady Saltos"></a></article>
 						<article class="item thumb" data-width="282"><h2>Lady Saltos 0978838196</h2><a href="images/fulls/04.jpg" class="image"><img src="images/thumbs/04.jpg" alt="Lady Saltos"></a></article>
 
