--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 						<article class="item thumb" data-width="282">
 							<h2>Lady Saltos 0978838196</h2>
-							<a href="images/fulls/LADYSALTOS2507181558.jpg" class="image"><img src="images/thumbs/LADYSALTOS2507181558.jpg" alt="Lady Saltos"></a>
+							<a href="images/fulls/LADYSALTOS2507181558.jpg" class="image"><img src="https://raw.githubusercontent.com/LadySaltos/LadySaltos.github.io/master/images/thumbs/LADY%20SALTOS%20%20070220181303.jpg" alt="Lady Saltos"></a>
 						</article>
 
 						<article class="item thumb" data-width="384">
