--- a/index.html
+++ b/index.html
@@ -42,37 +42,37 @@
 
 						<article class="item thumb" data-width="384">
 							<h2>Lady Saltos 0978838196</h2>
-							<a href="images/fulls/LADYSALTOS2507181611.jpg" class="image"><img src="images/thumbs/LADYSALTOS2507181611.jpg" alt="Lady Saltos"></a>
+							<a href="https://github.com/LadySaltos/LadySaltos.github.io/raw/master/images/fulls/LADY%20SALTOS%20%202507181558.jpg" class="image"><img src="https://github.com/LadySaltos/LadySaltos.github.io/raw/master/images/thumbs/LADY%20SALTOS%20%202507181558.jpg" alt="Lady Saltos"></a>
 						</article>
 
 						<article class="item thumb" data-width="274">
 							<h2>Lady Saltos 0978838196</h2>
-							<a href="images/fulls/LADYSALTOS2507181639.jpg" class="image"><img src="images/thumbs/LADYSALTOS2507181639.jpg" alt="Lady Saltos"></a>
+							<a href="https://github.com/LadySaltos/LadySaltos.github.io/raw/master/images/fulls/LADY%20SALTOS%20%202507181611.jpg" class="image"><img src="https://raw.githubusercontent.com/LadySaltos/LadySaltos.github.io/master/images/thumbs/LADY%20SALTOS%20%202507181611.jpg" alt="Lady Saltos"></a>
 						</article>
 
 						<article class="item thumb" data-width="282">
 							<h2>Lady Saltos 0978838196</h2>
-							<a href="images/fulls/LADYSALTOS2507181655.jpg" class="image"><img src="images/thumbs/LADYSALTOS2507181655.jpg" alt="Lady Saltos"></a>
+							<a href="https://github.com/LadySaltos/LadySaltos.github.io/raw/master/images/fulls/LADY%20SALTOS%20%202507181639.jpg" class="image"><img src="https://github.com/LadySaltos/LadySaltos.github.io/raw/master/images/thumbs/LADY%20SALTOS%20%202507181639.jpg" alt="Lady Saltos"></a>
 						</article>
 
 						<article class="item thumb" data-width="476">
 							<h2>Lady Saltos 0978838196</h2>
-							<a href="images/fulls/LADYSALTOS2507181705.jpg" class="image"><img src="images/thumbs/LADYSALTOS2507181705.jpg" alt="Lady Saltos"></a>
+							<a href="https://github.com/LadySaltos/LadySaltos.github.io/raw/master/images/fulls/LADY%20SALTOS%20%202507181655.jpg" class="image"><img src="https://github.com/LadySaltos/LadySaltos.github.io/raw/master/images/thumbs/LADY%20SALTOS%20%202507181655.jpg" alt="Lady Saltos"></a>
 						</article>
 
 						<article class="item thumb" data-width="232">
 							<h2>Lady Saltos 0978838196</h2>
-							<a href="images/fulls/LADYSALTOS2507181713.jpg" class="image"><img src="images/thumbs/LADYSALTOS2507181713.jpg" alt="Lady Saltos"></a>
+							<a href="https://github.com/LadySaltos/LadySaltos.github.io/raw/master/images/fulls/LADY%20SALTOS%20%202507181705.jpg" class="image"><img src="https://github.com/LadySaltos/LadySaltos.github.io/raw/master/images/thumbs/LADY%20SALTOS%20%202507181705.jpg" alt="Lady Saltos"></a>
 						</article>
 
 						<article class="item thumb" data-width="352">
 							<h2>Lady Saltos 0978838196</h2>
-							<a href="images/fulls/LADYSALTOS2507181726.jpg" class="image"><img src="images/thumbs/LADYSALTOS2507181726.jpg" alt="Lady Saltos"></a>
+							<a href="https://github.com/LadySaltos/LadySaltos.github.io/raw/master/images/fulls/LADY%20SALTOS%20%202507181713.jpg" class="image"><img src="https://github.com/LadySaltos/LadySaltos.github.io/raw/master/images/thumbs/LADY%20SALTOS%20%202507181713.jpg" alt="Lady Saltos"></a>
 						</article>
 
 						<article class="item thumb" data-width="348">
 							<h2>Lady Saltos 0978838196</h2>
-							<a href="images/fulls/LADYSALTOS070220181303.jpg" class="image"><img src="images/thumbs/LADYSALTOS070220181303.jpg" alt="Lady Saltos"></a>
+							<a href="https://github.com/LadySaltos/LadySaltos.github.io/raw/master/images/fulls/LADY%20SALTOS%20%202507181726.jpg" class="image"><img src="https://github.com/LadySaltos/LadySaltos.github.io/raw/master/images/thumbs/LADY%20SALTOS%20%202507181726.jpg" alt="Lady Saltos"></a>
 						</article>
 
 					<!-- Filler Thumb Items (just for demonstration purposes) -->
